Update nginx-recon.conf: enhance sensitive-file and backup/config detection, expand real-world paths and dev files for instant ban

--- a/filters/nginx-recon.conf
+++ b/filters/nginx-recon.conf
@@ -1,20 +1,33 @@
-[Definition]
-# Git exposure
-failregex = \[Client <HOST>\].*(?:\.git/|\.gitignore|\.git/config)
-# Environment files
-            \[Client <HOST>\].*(?:\.env|\.env\.backup|\.env\.prod|\.env\.local)
-# PHP info disclosure
-            \[Client <HOST>\].*(?:/phpinfo|phpinfo\.php|info\.php|test\.php)
-# Backup files
-            \[Client <HOST>\].*(?:\.bak|\.backup|\.old|\.save|\.swp|~)
-# Database dumps
-            \[Client <HOST>\].*(?:\.sql|database\.sql|dump\.sql|backup\.sql)
-# WordPress/admin panels
-            \[Client <HOST>\].*(?:/wp-admin|/wp-login|/admin\.php|/administrato)
-# Config files
-            \[Client <HOST>\].*(?:config\.php|configuration\.php|settings\.php)
-# Shell scripts
-            \[Client <HOST>\].*(?:\.sh|shell\.php|cmd\.php|backdoor\.php)
+# NGINX Recon/Sensitive Paths - Permanent Ban Patterns (2024–2025)
+#
+# Ban každý pokus o sensitive file access hneď (maxretry = 1)
+# Pokrýva environment/config files, backupy, DB dumpy, shell kódy, WP admin, PHP info a ďalšie.
+# Rozšírené o moderné varianty a najčastejšie real-world scan cesty:
+# - .env, .git/config, config.php, backup.*, dump.*, .sql, wp-config.php, .DS_Store, .htaccess, .gitignore
+# - /admin, /wp-login, /wp-admin, /api/backup, /phpinfo, shell.php, cmd.php, backdoor.php, .bak, .old, .swp, ~, DS_Store, .htaccess
+# - Pridané: /api/.env, /api/config, /.env.local, .npmrc, composer.lock, package-lock.json
 
-ignoreregex = ^.*booking/reschedule/.*$
-              .*\.php\?.*
+[Definition]
+failregex =
+    \[Client <HOST>\].*(?:\.git/|\.gitignore|\.git/config|\.npmrc)
+    \[Client <HOST>\].*(?:\.env|\.env\.backup|\.env\.prod|\.env\.local|\.env\.test|\.DS_Store|\.htaccess)
+    \[Client <HOST>\].*(?:/phpinfo|phpinfo\.php|info\.php|test\.php)
+    \[Client <HOST>\].*(?:/api/\.env|/api/config|composer\.lock|package-lock\.json|yarn\.lock)
+    \[Client <HOST>\].*(?:\.bak|\.backup|\.old|\.save|\.swp|~)
+    \[Client <HOST>\].*(?:\.sql|database\.sql|dump\.sql|backup\.sql|db\.sql|mysql\.sql|postgres\.sql)
+    \[Client <HOST>\].*(?:/wp-admin|/wp-login|wp-config\.php|/admin\.php|/administrato|/admin|/manage)
+    \[Client <HOST>\].*(?:config\.php|configuration\.php|settings\.php|/api/config|db_config\.php)
+    \[Client <HOST>\].*(?:\.sh|shell\.php|cmd\.php|backdoor\.php|\.py|\.pl)
+    \[Client <HOST>\].*(?:\.DS_Store|\.htaccess)
+    \[Client <HOST>\].*/backup/
+    \[Client <HOST>\].*/dump/
+    \[Client <HOST>\].*/private/
+    \[Client <HOST>\].*/secret/
+    \[Client <HOST>\].*/test/
+    \[Client <HOST>\].*/dev/
+    \[Client <HOST>\].*/staging/
+    \[Client <HOST>\].*/prod/
+    \[Client <HOST>\].*/local/
+ignoreregex =
+    ^.*booking/reschedule/.*$
+    .*\.php\?.*
