--- a/filters/nginx-recon.conf
+++ b/filters/nginx-recon.conf
@@ -1,33 +1,63 @@
-# NGINX Recon/Sensitive Paths - Permanent Ban Patterns (2024–2025)
-#
-# Ban každý pokus o sensitive file access hneď (maxretry = 1)
-# Pokrýva environment/config files, backupy, DB dumpy, shell kódy, WP admin, PHP info a ďalšie.
-# Rozšírené o moderné varianty a najčastejšie real-world scan cesty:
-# - .env, .git/config, config.php, backup.*, dump.*, .sql, wp-config.php, .DS_Store, .htaccess, .gitignore
-# - /admin, /wp-login, /wp-admin, /api/backup, /phpinfo, shell.php, cmd.php, backdoor.php, .bak, .old, .swp, ~, DS_Store, .htaccess
-# - Pridané: /api/.env, /api/config, /.env.local, .npmrc, composer.lock, package-lock.json
+# NGINX Proxy Manager - Recon/Sensitive Files Filter
+# Detekuje pokusy o prístup k sensitive súborom a konfiguračným cestám
+# Optimalizované pre NPM log formát: [Client <HOST>]
 
 [Definition]
-failregex =
-    \[Client <HOST>\].*(?:\.git/|\.gitignore|\.git/config|\.npmrc)
-    \[Client <HOST>\].*(?:\.env|\.env\.backup|\.env\.prod|\.env\.local|\.env\.test|\.DS_Store|\.htaccess)
-    \[Client <HOST>\].*(?:/phpinfo|phpinfo\.php|info\.php|test\.php)
-    \[Client <HOST>\].*(?:/api/\.env|/api/config|composer\.lock|package-lock\.json|yarn\.lock)
-    \[Client <HOST>\].*(?:\.bak|\.backup|\.old|\.save|\.swp|~)
-    \[Client <HOST>\].*(?:\.sql|database\.sql|dump\.sql|backup\.sql|db\.sql|mysql\.sql|postgres\.sql)
-    \[Client <HOST>\].*(?:/wp-admin|/wp-login|wp-config\.php|/admin\.php|/administrato|/admin|/manage)
-    \[Client <HOST>\].*(?:config\.php|configuration\.php|settings\.php|/api/config|db_config\.php)
-    \[Client <HOST>\].*(?:\.sh|shell\.php|cmd\.php|backdoor\.php|\.py|\.pl)
-    \[Client <HOST>\].*(?:\.DS_Store|\.htaccess)
-    \[Client <HOST>\].*/backup/
-    \[Client <HOST>\].*/dump/
-    \[Client <HOST>\].*/private/
-    \[Client <HOST>\].*/secret/
-    \[Client <HOST>\].*/test/
-    \[Client <HOST>\].*/dev/
-    \[Client <HOST>\].*/staging/
-    \[Client <HOST>\].*/prod/
-    \[Client <HOST>\].*/local/
-ignoreregex =
-    ^.*booking/reschedule/.*$
-    .*\.php\?.*
+
+# === GIT a Version Control ===
+failregex = \[Client <HOST>\].* "GET [^"]*\.git/
+            \[Client <HOST>\].* "GET [^"]*\.gitignore"
+            \[Client <HOST>\].* "GET [^"]*\.git/config"
+            \[Client <HOST>\].* "GET [^"]*\.npmrc"
+
+# === Environment Files ===
+            \[Client <HOST>\].* "GET [^"]*\.env(?:\.backup|\.prod|\.local|\.test)?"
+
+# === Dependency Lock Files ===
+            \[Client <HOST>\].* "GET https?://[^/]+/(?:composer\.lock|package-lock\.json|yarn\.lock)"
+
+# === Backup Files ===
+            \[Client <HOST>\].* "GET [^"]*\.(?:bak|backup|old|save|swp)"
+            \[Client <HOST>\].* "GET [^"]*~"
+
+# === Database Dumps ===
+            \[Client <HOST>\].* "GET [^"]*\.sql"
+            \[Client <HOST>\].* "GET [^"]*(?:dump|backup|database)\.sql"
+
+# === System Files ===
+            \[Client <HOST>\].* "GET https?://[^/]+/\.DS_Store"
+            \[Client <HOST>\].* "GET https?://[^/]+/\.htaccess"
+
+# === PHP Info/Test Pages ===
+            \[Client <HOST>\].* "GET https?://[^/]+/(?:phpinfo|info|test)\.php"
+
+# === WordPress Admin ===
+            \[Client <HOST>\].* "GET [^"]*/wp-(?:admin|login)
+            \[Client <HOST>\].* "GET [^"]*wp-config\.php"
+
+# === Generic Admin Paths ===
+            \[Client <HOST>\].* "GET https?://[^/]+/(?:admin(?:\.php|istrator)?|manage)"
+
+# === Config Files ===
+            \[Client <HOST>\].* "GET [^"]*(?:config|configuration|settings|db_config)\.php"
+
+# === Shell/Backdoor Files ===
+            \[Client <HOST>\].* "GET [^"]*(?:shell|cmd|backdoor|c99|r57)\.php"
+            \[Client <HOST>\].* "GET [^"]*\.(?:sh|py|pl)"
+
+# === Sensitive Directories ===
+            \[Client <HOST>\].* "GET https?://[^/]+/(?:backup|dump|private|secret|\.git)/"
+
+# === API Sensitive Paths ===
+            \[Client <HOST>\].* "GET [^"]*/api/(?:\.env|config)"
+
+# Ignoruj legitímne requesty
+ignoreregex = 
+    # Ignoruj všetky normálne PHP aplikačné cesty cez index.php
+    \[Client <HOST>\].* "(?:GET|POST) https [^ ]+ "/index\.php/
+    # Ignoruj statické assets
+    \[Client <HOST>\].* "GET [^"]*/assets/
+    # Ignoruj booking/reschedule (tvoja špecifická cesta)
+    \[Client <HOST>\].*booking/reschedule/
+    # Ignoruj favicon a robots
+    \[Client <HOST>\].* "GET [^"]*(?:favicon\.ico|robots\.txt)"
