feat(fail2ban): Optimalizovaný nginx-recon filter + EasyAppointments whitelist pre Nginx Proxy Manager (docker logy)

--- a/filters/nginx-recon.conf
+++ b/filters/nginx-recon.conf
@@ -1,63 +1,28 @@
 # NGINX Proxy Manager - Recon/Sensitive Files Filter
-# Detekuje pokusy o prístup k sensitive súborom a konfiguračným cestám
-# Optimalizované pre NPM log formát: [Client <HOST>]
+# NPM Log Format: [Date] - Code - METHOD SCHEME DOMAIN "PATH" [Client IP] ...
 
 [Definition]
 
-# === GIT a Version Control ===
-failregex = \[Client <HOST>\].* "GET [^"]*\.git/
-            \[Client <HOST>\].* "GET [^"]*\.gitignore"
-            \[Client <HOST>\].* "GET [^"]*\.git/config"
-            \[Client <HOST>\].* "GET [^"]*\.npmrc"
+failregex = ^.* GET https [^ ]+ "/[^"]*\.git/[^"]*" \[Client <HOST>\]
+            ^.* GET https [^ ]+ "/[^"]*\.gitignore" \[Client <HOST>\]
+            ^.* GET https [^ ]+ "/[^"]*\.git/config" \[Client <HOST>\]
+            ^.* GET https [^ ]+ "/[^"]*\.npmrc" \[Client <HOST>\]
+            ^.* GET https [^ ]+ "/[^"]*\.env(?:\.backup|\.prod|\.local|\.test)?(?:"|$)" \[Client <HOST>\]
+            ^.* GET https [^ ]+ "/(?:composer\.lock|package-lock\.json|yarn\.lock)" \[Client <HOST>\]
+            ^.* GET https [^ ]+ "/[^"]*\.(?:bak|backup|old|save|swp)" \[Client <HOST>\]
+            ^.* GET https [^ ]+ "/[^"]*~" \[Client <HOST>\]
+            ^.* GET https [^ ]+ "/[^"]*\.sql" \[Client <HOST>\]
+            ^.* GET https [^ ]+ "/[^"]*(?:dump|backup|database)\.sql" \[Client <HOST>\]
+            ^.* GET https [^ ]+ "/\.DS_Store" \[Client <HOST>\]
+            ^.* GET https [^ ]+ "/\.htaccess" \[Client <HOST>\]
+            ^.* GET https [^ ]+ "/(?:phpinfo|info|test)\.php" \[Client <HOST>\]
+            ^.* GET https [^ ]+ "/[^"]*wp-(?:admin|login)[^"]*" \[Client <HOST>\]
+            ^.* GET https [^ ]+ "/[^"]*wp-config\.php" \[Client <HOST>\]
+            ^.* GET https [^ ]+ "/(?:admin(?:\.php|istrator)?|manage)" \[Client <HOST>\]
+            ^.* GET https [^ ]+ "/[^"]*(?:config|configuration|settings|db_config)\.php" \[Client <HOST>\]
+            ^.* GET https [^ ]+ "/[^"]*(?:shell|cmd|backdoor|c99|r57)\.php" \[Client <HOST>\]
+            ^.* GET https [^ ]+ "/[^"]*\.(?:sh|py|pl)" \[Client <HOST>\]
+            ^.* GET https [^ ]+ "/(?:backup|dump|private|secret|\.git)/" \[Client <HOST>\]
+            ^.* GET https [^ ]+ "/api/(?:\.env|config)" \[Client <HOST>\]
 
-# === Environment Files ===
-            \[Client <HOST>\].* "GET [^"]*\.env(?:\.backup|\.prod|\.local|\.test)?"
-
-# === Dependency Lock Files ===
-            \[Client <HOST>\].* "GET https?://[^/]+/(?:composer\.lock|package-lock\.json|yarn\.lock)"
-
-# === Backup Files ===
-            \[Client <HOST>\].* "GET [^"]*\.(?:bak|backup|old|save|swp)"
-            \[Client <HOST>\].* "GET [^"]*~"
-
-# === Database Dumps ===
-            \[Client <HOST>\].* "GET [^"]*\.sql"
-            \[Client <HOST>\].* "GET [^"]*(?:dump|backup|database)\.sql"
-
-# === System Files ===
-            \[Client <HOST>\].* "GET https?://[^/]+/\.DS_Store"
-            \[Client <HOST>\].* "GET https?://[^/]+/\.htaccess"
-
-# === PHP Info/Test Pages ===
-            \[Client <HOST>\].* "GET https?://[^/]+/(?:phpinfo|info|test)\.php"
-
-# === WordPress Admin ===
-            \[Client <HOST>\].* "GET [^"]*/wp-(?:admin|login)
-            \[Client <HOST>\].* "GET [^"]*wp-config\.php"
-
-# === Generic Admin Paths ===
-            \[Client <HOST>\].* "GET https?://[^/]+/(?:admin(?:\.php|istrator)?|manage)"
-
-# === Config Files ===
-            \[Client <HOST>\].* "GET [^"]*(?:config|configuration|settings|db_config)\.php"
-
-# === Shell/Backdoor Files ===
-            \[Client <HOST>\].* "GET [^"]*(?:shell|cmd|backdoor|c99|r57)\.php"
-            \[Client <HOST>\].* "GET [^"]*\.(?:sh|py|pl)"
-
-# === Sensitive Directories ===
-            \[Client <HOST>\].* "GET https?://[^/]+/(?:backup|dump|private|secret|\.git)/"
-
-# === API Sensitive Paths ===
-            \[Client <HOST>\].* "GET [^"]*/api/(?:\.env|config)"
-
-# Ignoruj legitímne requesty
 ignoreregex = 
-    # Ignoruj všetky normálne PHP aplikačné cesty cez index.php
-    \[Client <HOST>\].* "(?:GET|POST) https [^ ]+ "/index\.php/
-    # Ignoruj statické assets
-    \[Client <HOST>\].* "GET [^"]*/assets/
-    # Ignoruj booking/reschedule (tvoja špecifická cesta)
-    \[Client <HOST>\].*booking/reschedule/
-    # Ignoruj favicon a robots
-    \[Client <HOST>\].* "GET [^"]*(?:favicon\.ico|robots\.txt)"
