Replace old v0.20 release with new production package

--- a/releases/v0.20/filters/f2b-web-medium.conf
+++ b/releases/v0.20/filters/f2b-web-medium.conf
@@ -1,5 +1,5 @@
 [Definition]
-failregex = ^.* (400|401|403|404|429).*\[Client <HOST>\].*$
+failregex = ^.* (400|401|403|404|429|444).*\[Client <HOST>\].*$
             ^.* GET https [^ ]+ "/\.git/.*" \[Client <HOST>\].*$
             ^.* GET https [^ ]+ "/\.env.*" \[Client <HOST>\].*$
             ^.* GET https [^ ]+ "/shell\.php" \[Client <HOST>\].*$
