--- a/releases/v0.20/filters/f2b-anomaly-detection.conf
+++ b/releases/v0.20/filters/f2b-anomaly-detection.conf
@@ -3,12 +3,12 @@
 # Production Ready
 
 [Definition]
-failregex = ^.* (?:GET|POST|PUT|DELETE) https [^ ]+ "/[^"]*[\[\]{}()@#$%%&*][^"]*" \[Client <HOST>\]
-            ^.* (?:GET|POST) https [^ ]+ ".*\?.*\?.*" \[Client <HOST>\]
-            ^.* HEAD https [^ ]+ ".*(?:http|https|ftp|gopher)://.*" \[Client <HOST>\]
-            ^.* (?:GET|POST) https [^ ]+ "/.*\.\..*/.*" \[Client <HOST>\]
-            ^.* (?:GET|POST) https [^ ]+ ".*(?:;|,){3,}.*" \[Client <HOST>\]
-            ^.* (?:GET|POST) https [^ ]+ "/.*(?:\*|\?|\||&){2,}.*" \[Client <HOST>\]
+failregex = ^.* (?:GET|POST|PUT|DELETE) (?:http|https) [^ ]+ "/[^"]*[\[\]{}()@#$%%&*][^"]*" \[Client <HOST>\]
+            ^.* (?:GET|POST) (?:http|https) [^ ]+ ".*\?.*\?.*" \[Client <HOST>\]
+            ^.* HEAD (?:http|https) [^ ]+ ".*(?:http|https|ftp|gopher)://.*" \[Client <HOST>\]
+            ^.* (?:GET|POST) (?:http|https) [^ ]+ "/.*\.\..*/.*" \[Client <HOST>\]
+            ^.* (?:GET|POST) (?:http|https) [^ ]+ ".*(?:;|,){3,}.*" \[Client <HOST>\]
+            ^.* (?:GET|POST) (?:http|https) [^ ]+ "/.*(?:\*|\?|\||&){2,}.*" \[Client <HOST>\]
 
 ignoreregex = ^.*\?.*page=.*$
               ^.*\?.*id=.*$
