--- a/releases/v0.20/filters/f2b-web-medium.conf
+++ b/releases/v0.20/filters/f2b-web-medium.conf
@@ -1,9 +1,9 @@
 [Definition]
-failregex = ^.* (400|401|403|404|429|444).*\[Client <HOST>\].*$
-            ^.* GET https [^ ]+ "/\.git/.*" \[Client <HOST>\].*$
-            ^.* GET https [^ ]+ "/\.env.*" \[Client <HOST>\].*$
-            ^.* GET https [^ ]+ "/shell\.php" \[Client <HOST>\].*$
-            ^.* GET https [^ ]+ "/admin.*" \[Client <HOST>\].*$
+failregex = ^.* (400|401|403|404|429).*\[Client <HOST>\].*$
+            ^.* GET (?:http|https) [^ ]+ "/\.git/.*" \[Client <HOST>\].*$
+            ^.* GET (?:http|https) [^ ]+ "/\.env.*" \[Client <HOST>\].*$
+            ^.* GET (?:http|https) [^ ]+ "/shell\.php" \[Client <HOST>\].*$
+            ^.* GET (?:http|https) [^ ]+ "/admin.*" \[Client <HOST>\].*$
             ^.*limiting requests, excess:.*by zone.*<HOST>.*$
 ignoreregex = ^.*booking/reschedule/.*$
               ^.*/assets/.*$
