--- a/releases/v0.20/filters/nginx-recon-optimized.conf
+++ b/releases/v0.20/filters/nginx-recon-optimized.conf
@@ -1,28 +1,28 @@
 [Definition]
-failregex = ^.* GET https [^ ]+ "/[^"]*\.git/[^"]*" \[Client <HOST>\]
-            ^.* GET https [^ ]+ "/[^"]*\.gitignore" \[Client <HOST>\]
-            ^.* GET https [^ ]+ "/[^"]*\.git/config" \[Client <HOST>\]
-            ^.* GET https [^ ]+ "/[^"]*\.npmrc" \[Client <HOST>\]
-            ^.* GET https [^ ]+ "/[^"]*\.env.*" \[Client <HOST>\]
-            ^.* GET https [^ ]+ "/[^"]*\.well-known" \[Client <HOST>\]
-            ^.* GET https [^ ]+ "/[^"]*composer\.lock" \[Client <HOST>\]
-            ^.* GET https [^ ]+ "/[^"]*package-lock\.json" \[Client <HOST>\]
-            ^.* GET https [^ ]+ "/[^"]*yarn\.lock" \[Client <HOST>\]
-            ^.* GET https [^ ]+ "/[^"]*\.bak" \[Client <HOST>\]
-            ^.* GET https [^ ]+ "/[^"]*\.backup" \[Client <HOST>\]
-            ^.* GET https [^ ]+ "/[^"]*\.old" \[Client <HOST>\]
-            ^.* GET https [^ ]+ "/[^"]*\.sql" \[Client <HOST>\]
-            ^.* GET https [^ ]+ "/[^"]*\.htaccess" \[Client <HOST>\]
-            ^.* GET https [^ ]+ "/[^"]*config\.php" \[Client <HOST>\]
-            ^.* GET https [^ ]+ "/phpinfo\.php" \[Client <HOST>\]
-            ^.* GET https [^ ]+ "/wp-admin" \[Client <HOST>\]
-            ^.* POST https [^ ]+ "/wp-json" \[Client <HOST>\]
-            ^.* GET https [^ ]+ "/shell\.php" \[Client <HOST>\]
-            ^.* GET https [^ ]+ "/cmd\.php" \[Client <HOST>\]
-            ^.* GET https [^ ]+ "/backdoor\.php" \[Client <HOST>\]
-            ^.* GET https [^ ]+ "/admin" \[Client <HOST>\]
-            ^.* POST https [^ ]+ "/admin" \[Client <HOST>\]
+failregex = ^.* GET (?:http|https) [^ ]+ "/[^"]*\.git/[^"]*" \[Client <HOST>\]
+            ^.* GET (?:http|https) [^ ]+ "/[^"]*\.gitignore" \[Client <HOST>\]
+            ^.* GET (?:http|https) [^ ]+ "/[^"]*\.git/config" \[Client <HOST>\]
+            ^.* GET (?:http|https) [^ ]+ "/[^"]*\.npmrc" \[Client <HOST>\]
+            ^.* GET (?:http|https) [^ ]+ "/[^"]*\.env.*" \[Client <HOST>\]
+            ^.* GET (?:http|https) [^ ]+ "/[^"]*\.well-known" \[Client <HOST>\]
+            ^.* GET (?:http|https) [^ ]+ "/[^"]*composer\.lock" \[Client <HOST>\]
+            ^.* GET (?:http|https) [^ ]+ "/[^"]*package-lock\.json" \[Client <HOST>\]
+            ^.* GET (?:http|https) [^ ]+ "/[^"]*yarn\.lock" \[Client <HOST>\]
+            ^.* GET (?:http|https) [^ ]+ "/[^"]*\.bak" \[Client <HOST>\]
+            ^.* GET (?:http|https) [^ ]+ "/[^"]*\.backup" \[Client <HOST>\]
+            ^.* GET (?:http|https) [^ ]+ "/[^"]*\.old" \[Client <HOST>\]
+            ^.* GET (?:http|https) [^ ]+ "/[^"]*\.sql" \[Client <HOST>\]
+            ^.* GET (?:http|https) [^ ]+ "/[^"]*\.htaccess" \[Client <HOST>\]
+            ^.* GET (?:http|https) [^ ]+ "/[^"]*config\.php" \[Client <HOST>\]
+            ^.* GET (?:http|https) [^ ]+ "/phpinfo\.php" \[Client <HOST>\]
+            ^.* GET (?:http|https) [^ ]+ "/wp-admin" \[Client <HOST>\]
+            ^.* POST (?:http|https) [^ ]+ "/wp-json" \[Client <HOST>\]
+            ^.* GET (?:http|https) [^ ]+ "/shell\.php" \[Client <HOST>\]
+            ^.* GET (?:http|https) [^ ]+ "/cmd\.php" \[Client <HOST>\]
+            ^.* GET (?:http|https) [^ ]+ "/backdoor\.php" \[Client <HOST>\]
+            ^.* GET (?:http|https) [^ ]+ "/admin" \[Client <HOST>\]
+            ^.* POST (?:http|https) [^ ]+ "/admin" \[Client <HOST>\]
             ^.* (400|401|403|404|429|444) .* \[Client <HOST>\]
-            ^.* HEAD https [^ ]+ .* \[Client <HOST>\]
+            ^.* HEAD (?:http|https) [^ ]+ .* \[Client <HOST>\]
 
 ignoreregex =
