fix(installer): resolve critical path issues and missing files in v0.33
- Fixed incorrect path resolution for 'f2b-docker-hook.sh' in installer
- Added missing installation step for 'docker-sync-hook.conf' (critical for sync)
- Corrected filter filename typo ('f2b-nginx-php-errors.conf' -> 'nginx-php-errors.conf')
- Updated installer to copy correct .local config files
- Ensured all 12 jails start correctly including 'nginx-php-errors'
- Verified docker-block auto-sync functionality

--- a/releases/v0.33/filters/nginx-php-errors.conf
+++ b/releases/v0.33/filters/nginx-php-errors.conf
@@ -9,7 +9,7 @@
 # CVE-2024-4577: PHP-CGI argument injection (%AD, auto_prepend_file, allow_url_include)
 failregex = ^.*client: <HOST>.*PHP message: .*auto_prepend_file.*$
             ^.*client: <HOST>.*PHP message: .*allow_url_include.*$
-            ^.*client: <HOST>.*request: ".*(%AD|%ad|-d\s+).*".*$
+            ^.*client: <HOST>.*request: ".*(%%AD|%%ad|-d\s+).*".*$
             
             # Shell execution attempts (supply chain backdoor indicators)
             ^.*client: <HOST>.*PHP message: .*shell_exec.*$
